@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - Plugin-PkgVersion:
+            Treat Moops class statements as packages
+            Fix pod parsing as first statement in a package
 
 5.031     2015-01-08 22:04:30-05:00 America/New_York
         - correct a test to avoid testing symlinks on Win32
